# heimdall-msgs

./: README
heimdall_msgs/: CMakeLists.txt  package.xml
heimdall_msgs/msg/: Activity.msg  ActivityArray.msg  ActivityArrayStamped.msg  Masks.msg  PolygonArrayStamped.msg
heimdall_msgs/srv/: AddMaskSrv.srv  CommandSrv.srv  GenerateMovie.srv  GetMaskListSrv.srv  GetMaskSrv.srv  RemoveMaskListSrv.srv
