<?xml version="1.0"?>
<package>
  <name>heimdall_msgs</name>
  <version>1.0.0</version>
  <description>A package containing custom Heimdall messages.</description>
  <maintainer email="info@enacer.com">Enacer</maintainer>
  <license>AGPL-3.0</license>
  <url type="website">https://www.enacer.com/</url>
  <author>Christof Oost</author>
  <author>Amir Shantia</author>
  <author>Ron Snijders</author>
  <author>Egbert van der Wal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export />
</package>
